# llm_benchmark

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.scratch/pam-integration/: spec.md
.scratch/pam-integration/issues/: 01-pam-model-implementation.md  02-pam-model-wrapper-generation.md  03-cli-config-integration.md  04-tests-verification.md
.scratch/training-environment/: spec.md
.scratch/training-environment/issues/: 01-dataset-download-prep.md  02-gpt-model-port.md  03-trainer-terminal-logger.md  04-tensorboard-checkpointing.md  05-cli-interface.md  06-integration-tests.md
configs/: train_shakespeare.yaml  train_shakespeare_pam.yaml
docs/adr/: 0001-loggers-as-callbacks.md  0002-dataset-batch-provider-interface.md  0003-model-inheritance-from-nn-module.md  0004-modular-package-structure.md  0005-callback-lifecycle-hooks.md  0006-eval-and-inference-cli.md  0007-automatic-data-preparation.md  0007-manual-data-preparation-requirement.md
paper/: Phase-Associative Memory.md
src/: cli.py  trainer.py
src/base/: callback.py  dataset.py  logger.py  model.py
src/callbacks/: checkpoint.py  tensorboard_logger.py  terminal_logger.py
src/datasets/: shakespeare.py
src/models/: gpt.py  pam.py
tests/: test_callbacks.py  test_cli.py  test_dataset.py  test_model.py  test_pam.py  test_trainer.py
