[project]
name = "nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "numpy>=2.5.1",
    "pyyaml>=6.0.3",
    "tensorboard>=2.21.0",
    "tiktoken>=0.13.0",
    "torch>=2.13.0",
    "typer>=0.26.8",
]

[tool.uv]
exclude-newer = "3d"
